<resources>
    <string name="login_Please_wait_for">请等待</string>
    <string name="Current_network">当前网络不可用，请开启手机网络</string>
    <string name="login_seconds">秒</string>
    <string name="Temporarily_no_data">暂无数据</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="trust_price">委托价</string>
    <string name="market_price">市价单</string>
    <string name="trust_quantity">委托量</string>
    <string name="social_contract">收起</string>
    <string name="social_expend">展开</string>
    <string name="social_text_target">网页链接</string>
    <string name="app_name">EEX</string>
    <string name="action_settings">Settings</string>
    <string name="filter_vcode">.0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@</string>
    <string name="filter_vcode4">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="filter_vcode1">0123456789</string>
    <string name="filter_vcode2">0123456789.</string>
    <string name="filter_vcode3">0123456789-.</string>
    <string name="ma_normal">MA(5, 10, 20)</string>
    <string name="ma_highlight">●MA5 %1$.2f ●MA10 %2$.2f ●MA20 %3$.2f</string>
    <string name="macd_normal">MACD(12, 26, 9)</string>
    <string name="macd_highlight">MACD(12, 26, 9) ●DIFF %1$.2f ●DEA %2$.2f ●MACD %3$.2f</string>
    <string name="rsi_normal">RSI(6, 12, 24)</string>
    <string name="rsi_highlight">RSI(6, 12, 24) ●RSI1 %1$.2f ●RSI2 %2$.2f ●RSI3 %3$.2f</string>
    <string name="kdj_normal">KDJ(9, 3, 3)</string>
    <string name="kdj_highlight">KDJ(9, 3, 3) ●K %1$.2f ●D %2$.2f ●J %3$.2f</string>
    <string name="boll_normal">BOLL(20, 2)</string>
    <string name="boll_highlight">BOLL(20, 2) ●MID %1$.2f ●UPPER %2$.2f ●LOWER %3$.2f</string>
    <string name="volume_highlight">●MA5 %1$.2f ●MA10 %2$.2f</string>
    <string name="campaign_Project_selection_name_text">者协会关爱老人主题活动</string>
    <string name="campaign_Project_selection_host_text">重庆市江北区</string>
    <string name="campaign_Project_selection_heat_text">1545</string>
    <string name="campaign_Project_selection_time_text">2016-03-03</string>
    <string name="Versionen_unbekannt">版本号未知</string>
    <string name="shichang_register">市场</string>
    <string name="shouye_register">首页</string>
    <string name="k_open">开</string>
    <string name="k_close">收</string>
    <string name="k_max">24h最高</string>
    <string name="k_min">24h最低</string>
    <string name="k_num">成交量</string>
    <string name="k_amount">额</string>
    <string name="k_exchange">换</string>
    <string name="k_ma">MA</string>
    <string name="k_ma5">5:</string>
    <string name="k_ma10">10:</string>
    <string name="k_ma20">20:</string>
    <string name="k_ma30">30:</string>
    <string name="average_price">均价:%1$s</string>
    <string name="new_price">最新:</string>
    <string name="wan_unit">万手</string>
    <string name="yi_unit">亿手</string>
    <string name="entity_macd">MACD</string>
    <string name="entity_kdj">KDJ</string>
    <string name="entity_wr">WR</string>
    <string name="entity_rsi">RSI</string>
    <string name="entity_boll">BOLL</string>
    <string name="entity_expma">EXPMA</string>
    <string name="entity_dmi">DMI</string>
    <string name="login_yzm">请输入验证码</string>
    <string name="caozuo">操作</string>
    <string name="addbi">添加币账户</string>
    <string name="meiti">媒体资讯</string>
    <string name="hangye">行业动态</string>
    <string name="bixinwen">币种新闻</string>
    <string name="helepme">帮助中心</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="login_registercq">注册账号</string>
    <string name="login_register_nosms">未收到短信</string>
    <string name="F">请输入邮箱/电话</string>
    <string name="login_newpwds">忘记密码</string>
    <string name="login_no">登录失败!</string>
    <string name="wangl">网络请求失败</string>
    <string name="youxianfw">请输入邮箱</string>
    <string name="youxianfw1">邮箱</string>
    <string name="yes_phone">请输入正确手机号</string>
    <string name="msg">短信发送失败</string>
    <string name="long_pwosd">请限制密码长度</string>
    <string name="newpword">两次输入密码不一致</string>
    <string name="registerNo">注册失败</string>
    <string name="sever_bas">服务协议</string>
    <string name="zichan">资产</string>
    <string name="guzhi">估值（BTC）</string>
    <string name="dakai">收起小额资产</string>
    <string name="shouqi">打开小额资产</string>
    <string name="yuans">请输入原始登录密码</string>
    <string name="xianmima">请输入新密码</string>
    <string name="zaici">请再次输入新密码</string>
    <string name="jiinqigongao">近期公告</string>
    <string name="jiinqigongao1">公告</string>
    <string name="shoujihao">手机</string>
    <string name="Retrievepword">重置密码</string>
    <string name="putyzm">发送验证码</string>
    <string name="newaonima">请输入你的原始登录密码</string>
    <string name="newmima">新登录密码</string>
    <string name="zaicishuru">请再次输入你的新登录密码</string>
    <string name="saa">请输入短信验证码</string>
    <string name="caonima">原登录密码</string>
    <string name="xiugai">修改密码</string>
    <string name="qingshoujihao">请输入手机号</string>
    <string name="buyiang">两次密码不一致</string>
    <string name="jiebangyouxiang">解绑邮箱</string>
    <string name="yanzmfwfe">请输入邮箱验证码</string>
    <string name="myZoe">我的</string>
    <string name="zhanghu">账户:</string>
    <string name="keyong">可用:</string>
    <string name="dongjie">冻结:</string>
    <string name="heji">合计:</string>
    <string name="loginno">登录超时请重新登录</string>
    <string name="isname">实名审核中请稍后再试</string>
    <string name="person">用户数据获取失败!</string>
    <string name="outlogin">退出登录成功</string>
    <string name="congzi">充值提现</string>
    <string name="saoma">扫码转币</string>
    <string name="weotuo">我的委托</string>
    <string name="jilu">交易记录</string>
    <string name="cbliushui">币种充值流水</string>
    <string name="bizhongtixian">币种提现流水</string>
    <string name="bizhanghu">币账户</string>
    <string name="fanyong">推荐返佣</string>
    <string name="oulogin">退出登录</string>
    <string name="tibijilu">提币记录</string>
    <string name="tra_Search">查询</string>
    <string name="nodata">该页面暂无数据！</string>
    <string name="time">时间</string>
    <string name="bizhong">币种</string>
    <string name="nuber">数量</string>
    <string name="quyukuai">区块确认</string>
    <string name="zhuangtai">状态</string>
    <string name="chongzi">充值</string>
    <string name="mychongz">我要充值</string>
    <string name="mytixian">我要提现</string>
    <string name="mychongbi">我要充币</string>
    <string name="mytibi">我要提币</string>
    <string name="money">实际到账金额</string>
    <string name="xing">请输入姓氏</string>
    <string name="ming">请输入名字</string>
    <string name="bankname">请输入银行卡号</string>
    <string name="moneynuber">请输入充值金额</string>
    <string name="moneyMin">最小充值金额为500</string>
    <string name="xingy">姓氏</string>
    <string name="mingy">名字</string>
    <string name="banknamee">银行</string>
    <string name="bankll">请选择银行</string>
    <string name="jine">金额</string>
    <string name="xianz">请严格按照当前数量汇款</string>
    <string name="xiayibu">生成银行汇款单</string>
    <string name="shijian">审核时间为:工作日9:00-17:00</string>
    <string name="xuanzBank">选择银行卡</string>
    <string name="congzjl">充值记录</string>
    <string name="mingc">名称/成交量</string>
    <string name="newpri">最新价格</string>
    <string name="huikuandna">汇款单</string>
    <string name="tit">汇款时请务必填写备注</string>
    <string name="zhangtie">24h涨跌</string>
    <string name="mairu">买入</string>
    <string name="prices">价格</string>
    <string name="zuijinchengjiao">最近成交</string>
    <string name="maichu">卖出</string>
    <string name="tit1">,否则有可能无法充值到您的账户余额</string>
    <string name="tit2">待审核,请按照本汇款单信息进行线下汇款</string>
    <string name="tit3">已完成,请按照本汇款单信息进行线下汇款</string>
    <string name="tit4">已否决,请按照本汇款单信息进行线下汇款</string>
    <string name="tit5">等待成交,请按照本汇款单信息进行线下汇款</string>
    <string name="wenxintis">温馨提示:</string>
    <string name="bankq">汇入银行账户</string>
    <string name="huiruyingk">汇入银行</string>
    <string name="huiru">汇入银行支行</string>
    <string name="moneypersion">收款人</string>
    <string name="order">订单号</string>
    <string name="beizhu">备注</string>
    <string name="xunibi">虚拟币选择</string>
    <string name="xinibicngz">充值虚拟币</string>
    <string name="xuanbi">请选择币种</string>
    <string name="congb">充币</string>
    <string name="fuz">复制成功</string>
    <string name="serds">手续费额</string>
    <string name="qingshuru">请输入提现金额</string>
    <string name="nuberdaxiao">请输入大于500的金额</string>
    <string name="iszhanghu">请选择收款账户</string>
    <string name="bangding">请绑定邮箱或电话</string>
    <string name="tixianmoney">可提现金额:</string>
    <string name="bangd">绑定邮箱</string>
    <string name="bankaa">银行卡:</string>
    <string name="moneyshuiang">提现金额:</string>
    <string name="tixian">提现</string>
    <string name="xuanzheyingh">提现请选择银行卡</string>
    <string name="xuanze">提现审核工作时间24小时之内通过审核,节假日1-3天通过审核</string>
    <string name="zhuanchu">转出虚拟币</string>
    <string name="name1">2.禁止向(</string>
    <string name="name2">)地址充值除(</string>
    <string name="name3">)之外的资产,任何充入(</string>
    <string name="name4">)地址的非(</string>
    <string name="name5">)资产将不可找回.</string>
    <string name="name6">1.单笔转出最小币数</string>
    <string name="ge">个</string>
    <string name="name7">,单日转出最大币数</string>
    <string name="wanglusever">网络手续费</string>
    <string name="keyong1">可用</string>
    <string name="record_state">状态</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="take_photo">拍照</string>
    <string name="pic_choose">相册</string>
    <string name="given_name">名字</string>
    <string name="please_enter_name">请输入持卡人姓名</string>
    <string name="choose_bank">选择银行</string>
    <string name="bank_number">银行卡号</string>
    <string name="please_enter_bank_number">请输入银行卡号</string>
    <string name="branch_bank">开户支行</string>
    <string name="please_enter_branch_bank">请输入开户支行</string>
    <string name="bank_place">银行所在地</string>
    <string name="please_enter_bank_place">请输入银行所在地</string>
    <string name="bank_card_setting">银行卡设置</string>
    <string name="message_code">短信验证码</string>
    <string name="save">保存</string>
    <string name="attorney_normal">普通委托</string>
    <string name="attorney_limit">止盈止损</string>
    <string name="attorney">委托</string>
    <string name="type">类型</string>
    <string name="choose_coin_type">币种选择</string>
    <string name="sale_type_both">买入卖出</string>
    <string name="reset">重置</string>
    <string name="delegation_type">委托类型</string>
    <string name="delegation_all">全部</string>
    <string name="delegation_market">市价交易</string>
    <string name="delegation_trigger">触发交易</string>
    <string name="deal_type">交易类型</string>
    <string name="deal_call_option">买涨</string>
    <string name="over_night">是否过夜</string>
    <string name="daily">不过夜</string>
    <string name="next_day">过夜</string>
    <string name="currency_type">币种选择</string>
    <string name="not_deal">未成交</string>
    <string name="some_deal">部分成交</string>
    <string name="all">全部</string>
</resources>