<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:background="@color/white">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_20dp"
    android:layout_marginTop="@dimen/layout_20dp"
    android:text="@string/delegation_type"
    android:textColor="@color/color_8fa2cc"
    />

  <RadioGroup
    android:id="@+id/radio_attorney"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/delegation_all"
      style="@style/bond_filtrate_radio_style"
      android:checked="true"
      android:text="@string/delegation_all"/>

    <RadioButton
      android:id="@+id/delegation_market"
      style="@style/bond_filtrate_radio_style"
      android:text="@string/delegation_market"/>

    <RadioButton
      android:id="@+id/delegation_trigger"
      style="@style/bond_filtrate_radio_style"
      android:text="@string/delegation_trigger"/>
  </RadioGroup>

  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginLeft="@dimen/layout_20dp"
  android:text="@string/deal_type"
  android:textColor="@color/color_8fa2cc"
  />

  <RadioGroup
    android:id="@+id/radio_deal_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/deal_type_both"
      style="@style/bond_filtrate_radio_style"
      android:checked="true"
      android:text="@string/delegation_all"/>

    <RadioButton
      android:id="@+id/deal_call"
      style="@style/bond_filtrate_radio_style"
      android:text="@string/deal_call_option"/>

    <RadioButton
      android:id="@+id/deal_put"
      style="@style/bond_filtrate_radio_style"
      android:text="@string/deal_call_option"/>
  </RadioGroup>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_20dp"
    android:text="@string/over_night"
    android:textColor="@color/color_8fa2cc"
    />

  <RadioGroup
    android:id="@+id/radio_over_night"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/over_night_both"
      style="@style/bond_filtrate_radio_style"
      android:checked="true"
      android:text="@string/delegation_all"/>

    <RadioButton
      android:id="@+id/next_day"
      style="@style/bond_filtrate_radio_style"
      android:text="@string/next_day"/>

    <RadioButton
      android:id="@+id/daily"
      style="@style/bond_filtrate_radio_style"
      android:text="@string/daily"/>
  </RadioGroup>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_20dp"
    android:text="@string/currency_type"
    android:textColor="@color/color_8fa2cc"
    />

  <TextView
    android:id="@+id/tv_currency_all"
    style="@style/bond_filtrate_radio_style"
    android:text="@string/delegation_all"
    android:textColor="@color/color_8fa2cc"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/layout_20dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/btn_reset"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/reset"
      android:textColor="@color/color_0080ff"
      android:background="@color/color_f2f4f9"
      android:textSize="@dimen/text_12sp"
      android:padding="@dimen/layout_9dp"/>

    <TextView
      android:id="@+id/btn_ok"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/sure"
      android:textColor="@color/white"
      android:background="@color/color_0080ff"
      android:textSize="@dimen/text_12sp"
      android:padding="@dimen/layout_9dp"/>

  </LinearLayout>

</LinearLayout>