<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:background="@color/white">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_20dp"
    android:layout_marginTop="@dimen/layout_20dp"
    android:text="@string/attorney"
    android:textColor="@color/color_8fa2cc"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioGroup
      android:id="@+id/radio_attorney"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/attorney_normal"
        style="@style/filtrate_radio_style"
        android:checked="true"
        android:text="@string/attorney_normal"/>

      <RadioButton
        android:id="@+id/attorney_limit"
        style="@style/filtrate_radio_style"
        android:text="@string/attorney_limit"/>
    </RadioGroup>

    <View
      android:layout_weight="1"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:visibility="invisible"/>

  </LinearLayout>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_20dp"
    android:text="@string/type"
    android:textColor="@color/color_8fa2cc"
    />

  <RadioGroup
    android:id="@+id/radio_sale_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/sale_type_both"
      style="@style/filtrate_radio_style"
      android:checked="true"
      android:text="@string/sale_type_both"/>

    <RadioButton
      android:id="@+id/sale_buy"
      style="@style/filtrate_radio_style"
      android:text="@string/mairu"/>

    <RadioButton
      android:id="@+id/sale_sold"
      style="@style/filtrate_radio_style"
      android:text="@string/maichu"/>
  </RadioGroup>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/layout_20dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/btn_reset"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/reset"
      android:textColor="@color/color_0080ff"
      android:background="@color/color_f2f4f9"
      android:textSize="@dimen/text_12sp"
      android:padding="@dimen/layout_9dp"/>

    <TextView
      android:id="@+id/btn_ok"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/sure"
      android:textColor="@color/white"
      android:background="@color/color_0080ff"
      android:textSize="@dimen/text_12sp"
      android:padding="@dimen/layout_9dp"/>

  </LinearLayout>

</LinearLayout>